--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "list": "npm list --depth=0",
+    "outdated": "npm outdated --depth=0",
+    "update": "npm update",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "uninstall": "rm -rf node_modules && rm package-lock.json"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "deploy": "gh-pages -d dist",
+    "uninstall": "rm -rf node_modules && rm -rf dist && rm package-lock.json"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^6.3.0",
+    "vite": "^6.2.0",
+    "vite-plugin-restart": "^0.4.2"
+  },
+  "dependencies": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   }
 }
