--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
+## LOGS
+logs
+*.log
+
 ## DIRECTORIES
 node_modules
 
 ## FILES
+.DS_Store
+.vscode/*
+.idea
 package-lock.json
 README.md
 NOTES.txt
